add meal plan - done initial insert
