# meal-dash-business/src/dtos/mealplan.dto.ts
@@ -1,0 +1,21 @@
+import { IsNotEmpty } from "class-validator";
+
+export class CreateMealPlanDto {
+  
+    foodvenderuser_id?: number;
+  
+    @IsNotEmpty()
+    mealplan_recurrence: string;
+  
+    @IsNotEmpty()
+    mealplan_title: string;
+  
+    @IsNotEmpty()
+    mealplan_description: string;
+  
+    @IsNotEmpty()
+    is_active: boolean;
+
+    
+
+}
