# meal-dash-business/src/entities/mealplan.entity.ts
@@ -1,0 +1,29 @@
+import { IsNotEmpty } from "class-validator";
+import { Entity, BaseEntity, PrimaryGeneratedColumn, Column, Unique } from "typeorm";
+
+@Entity("mealplans")
+export class MealPlanEntity extends BaseEntity{
+  @PrimaryGeneratedColumn()
+  mealplan_id: number;
+
+  @Column()
+  foodvenderuser_id: number;
+
+  @Column()
+  @IsNotEmpty()
+  mealplan_recurrence: string;
+
+  @Column()
+  @IsNotEmpty()
+  @Unique(['foodvenderuser_id','mealplan_title'])
+  mealplan_title: string;
+
+  @Column()
+  @IsNotEmpty()
+  mealplan_description: string;
+
+  @Column()
+  @IsNotEmpty()
+  is_active: boolean;
+
+}
